--- a/morse.html
+++ b/morse.html
@@ -17,13 +17,13 @@ body {
     <h2>created 8/22</h2>
 </div>
 <br>
-<a id="entertext">Enter text here:</a>
-<button id="switch" href="morse.html">Translate to English</button>
+<a id="entertext">Enter Morse Code here:</a>
+<button id="switch" href="main.html">Translate to Morse</button>
 <form class="boxparent" method="post">
-    <textarea class="textbox" id="input" rows="10" cols="80" placeholder="Enter text here"> </textarea>
+    <textarea class="textbox" id="input" rows="10" cols="80" placeholder="Enter Morse Code here"> </textarea>
     <textarea readonly class="textbox" id="output" rows="10" cols="80"></textarea>
 </form>
 
-<script src="main.js"></script>
+<script src="morse.js"></script>
 </body>
 </html>
