--- a/morse.html
+++ b/morse.html
@@ -18,7 +18,7 @@ body {
     <h2>created 8/22</h2>
 </div>
 <br>
-<a id="entertext">Enter Morse Code here:</a>
+<a id="entertext">Enter Morse Code here (hit enter when you've finished typing):</a>
 <button id="switch" href="main.html">Translate to Morse</button>
 <form class="boxparent" method="post">
     <textarea class="textbox" id="input" rows="10" cols="80" placeholder="Enter Morse Code here"> </textarea>
