--- a/morse.html
+++ b/morse.html
@@ -20,7 +20,7 @@ body {
 </div>
 <br>
 <form class="boxparent" method="post">
-    <textarea class="textbox" id="input" rows="10" cols="80" placeholder="Enter Morse Code here"></textarea>
+    <textarea class="textbox" id="input" rows="10" cols="80" placeholder="Enter Morse Code here ('//' for space)"></textarea>
     <textarea readonly class="textbox" id="output" rows="10" cols="80"></textarea>
 </form>
 
