--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <head>
-    <link rel="icon" href="87878901.favicon">
+    <link rel="icon" href="straymod.png">
     <title>Morse Code Translator</title>
 </head>
 <link rel="stylesheet" href="main.css">
