--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <head>
-    <link rel="icon" href="straymod.png">
+    <link rel="icon" href="strayavmod.png">
     <title>Morse Code Translator</title>
 </head>
 <link rel="stylesheet" href="main.css">
@@ -24,7 +24,6 @@ body {
     <textarea readonly class="textbox" id="output"></textarea>
 </form>
 <button id="switch" href="morse.html">Translate to English</button>
-
 <script src="main.js"></script>
 </body>
 </html>
