--- a/morse.html
+++ b/morse.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <head>
-    <link rel="icon" href="straymod.png">
+    <link rel="icon" href="strayavmod.png">
     <title>Morse Code Translator</title>
 </head>
 <link rel="stylesheet" href="main.css">
@@ -23,7 +23,6 @@ body {
     <textarea class="textbox" id="input" rows="10" cols="80" placeholder="Enter Morse Code here ('//' for space)"></textarea>
     <textarea readonly class="textbox" id="output" rows="10" cols="80"></textarea>
 </form>
-
 <button id="switch" href="main.html">Translate to Morse</button>
 <script src="morse.js"></script>
 </body>
